apps/base/ingress/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  labels:
    revision: 1
spec:
  entryPoints:
    - websecure
  routes:
    - match:
      kind: Rule
      services: []
      middlewares:
      - name: traefik-sso@kubernetescrd
      - name: traefik-redirect-scheme@kubernetescrd
  tls:
    secretName: default-samsonnguyen-ca
    domains:
      - main: samsonnguyen.ca
